--- a/templates/editar.html
+++ b/templates/editar.html
@@ -2,18 +2,18 @@
 {% block conteudo %}
 <form action="{{ url_for('atualizar') }}" method="post">
     <fieldset>
-        <input type="hidden" name="id" value="{{jogo.id}}">
+        <input type="hidden" name="id" value="{{book.id}}">
         <div class="form-group">
             <label for="nome">Nome</label>
-            <input type="text" id="nome" name="nome" class="form-control" value="{{jogo.nome}}">
+            <input type="text" id="nome" name="nome" class="form-control" value="{{book.nome}}">
         </div>
         <div class="form-group">
             <label for="categoria">Categoria</label>
-            <input type="text" id="categoria" name="categoria" class="form-control" value="{{jogo.categoria}}">
+            <input type="text" id="categoria" name="categoria" class="form-control" value="{{book.categoria}}">
         </div>
         <div class="form-group">
-            <label for="console">Console</label>
-            <input type="text" id="console" name="console" class="form-control" value="{{jogo.console}}">
+            <label for="autor">Console</label>
+            <input type="text" id="autor" name="autor" class="form-control" value="{{book.autor}}">
         </div>
         <button type="submit" class="btn btn-primary btn-salvar">Salvar</button>
     </fieldset>
