--- a/templates/editar.html
+++ b/templates/editar.html
@@ -5,15 +5,15 @@
         <input type="hidden" name="id" value="{{book.id}}">
         <div class="form-group">
             <label for="nome">Nome</label>
-            <input type="text" id="nome" name="nome" class="form-control" value="{{book.nome}}">
+            <input type="text" id="nome" name="name" class="form-control" value="{{book.nome}}">
         </div>
         <div class="form-group">
             <label for="categoria">Categoria</label>
-            <input type="text" id="categoria" name="categoria" class="form-control" value="{{book.categoria}}">
+            <input type="text" id="categoria" name="category" class="form-control" value="{{book.categoria}}">
         </div>
         <div class="form-group">
             <label for="autor">Console</label>
-            <input type="text" id="autor" name="autor" class="form-control" value="{{book.autor}}">
+            <input type="text" id="autor" name="author" class="form-control" value="{{book.autor}}">
         </div>
         <button type="submit" class="btn btn-primary btn-salvar">Salvar</button>
     </fieldset>
