--- a/templates/novo.html
+++ b/templates/novo.html
@@ -4,15 +4,15 @@
     <fieldset>
         <div class="form-group">
             <label for="nome">Nome</label>
-            <input type="text" id="nome" name="nome" class="form-control">
+            <input type="text" id="nome" name="name" class="form-control">
         </div>
         <div class="form-group">
             <label for="categoria">Categoria</label>
-            <input type="text" id="categoria" name="categoria" class="form-control">
+            <input type="text" id="categoria" name="category" class="form-control">
         </div>
         <div class="form-group">
             <label for="autor">Autor</label>
-            <input type="text" id="autor" name="autor" class="form-control">
+            <input type="text" id="autor" name="author" class="form-control">
         </div>
         <button type="submit" class="btn btn-primary btn-salvar">Salvar</button>
     </fieldset>
